# wesley

./: .gitignore  CMakeLists.txt  README.md
examples/: server.c  ws_client.html  ws_server.c
include/: ws.h  ws_base64.h
src/: ws.c  ws_base64.c  ws_http.c  ws_http.h  ws_sha1.c  ws_sha1.h  ws_socket.c  ws_socket.h  ws_string.c  ws_string.h  ws_types.h
